tests/lang/compile_fail/cond_type_mismatch.expo
fn pick(n: Int) -> String
  cond
    n > 0 ->
      "positive"

    n < 0 ->
      x = n * -1
      x

    else ->
      "zero"
  end
end

fn main
  print(pick(5))
end
